# otus-cpp-pro-server

./: .gitignore  README.md  clang-tidy
gui/: gui.drawio
tcp_server/: CMakeLists.txt
tcp_server/include/app_gui/: CMakeLists.txt  definition.hpp  wnd.cpp  wnd.hpp
tcp_server/include/app_prm/: prm.cpp  prm.hpp
tcp_server/include/mvc/: CMakeLists.txt  Controller.cpp  Controller.hpp  IController.hpp  IModel.hpp  IView.hpp  Model.cpp  Model.hpp  View.cpp  View.hpp
tcp_server/include/some-library/: README.md
tcp_server/include/tcp_server/: CMakeLists.txt  ITCPServer.hpp  TCPServer.hpp
tcp_server/include/version/: CMakeLists.txt
tcp_server/src/: CMakeLists.txt  main 000.cpp  main copy.cpp  main.cpp  main.hpp
tcp_server/tests/: CMakeLists.txt  btest_version.cpp  gtests_version.cpp
